[specs] Prevent the spec runner margins from jumping

--- a/spec/specs.sass
+++ b/spec/specs.sass
@@ -1,6 +1,11 @@
 body
   overflow-y: scroll
 
+  // We have a lot of specs that measure the distance of elements
+  // from the screen edge, so we can't have the Jasmine runner to have
+  // any margins on the body.
+  margin-top: 0
+
 // Reduce the backdrop flashing during modal specs
 up-modal-backdrop,
 up-cover-backdrop,
